# packet_editor

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  KnowledgeBase.md  README.md
apps/: dpdk_init.cpp
cmake/: ApplyPatchIfNeeded.cmake  CopyDpdkMlx5Glue.cmake  WriteDpdkPkgConfigArgs.cmake
examples/: tap_runtime.packet
include/packet/: ast.hpp  checker.hpp  dpdk_offload.hpp  lexer.hpp  packet.hpp  packet_constructor.hpp  packet_generator.hpp  packet_serializer.hpp  parser.hpp  pcap_writer.hpp  registry.hpp  runtime.hpp  type_validator.hpp  util.hpp  value.hpp
patches/dpdk/: 0001-config-do-not-link-libpcap-when-net-pcap-is-disabled.patch
src/: checker.cpp  dpdk_offload.cpp  lexer.cpp  packet_constructor.cpp  packet_generator.cpp  packet_serializer.cpp  parser.cpp  pcap_writer.cpp  registry.cpp  runtime.cpp  type_validator.cpp  util.cpp  value.cpp
tasks/: parser.md
tests/: test_checker.cpp  test_file_mode.cpp  test_lexer.cpp  test_packet_constructor.cpp  test_packet_serializer.cpp  test_parser.cpp  test_runtime.cpp
tests/e2e/: conftest.py  requirements.txt  run_pytest.py  test_tap_runtime.py
